* Resolve {bz: 1687} by making tag names nowrap in S3 side panel
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@11238 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -2024,6 +2024,7 @@ table.widgetUserPrefs td.widgetUserPrefsButtons {
     clear: left;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 div.pagination-container {
